# QTCMakeCpp

./: CMakeLists.txt  main.cpp
